RESOLVED FIXED12573
SVG does not correctly handle onfocusin, onfocusout or onactivate
https://bugs.webkit.org/show_bug.cgi?id=12573
Summary SVG does not correctly handle onfocusin, onfocusout or onactivate
Eric Seidel (no email)
Reported 2007-02-04 03:37:32 PST
SVG does not correctly handle onfocusin, onfocusout or onactivate I bet they're not being parsed correctly. I'm not sure if webkit has support in general for these events though.
Attachments
Eric Seidel (no email)
Comment 1 2007-10-06 22:18:31 PDT
Landed as r26092 on feature-branch.
Note You need to log in before you can comment on or make changes to this bug.