2007-10-06  Eric Seidel  <eric@webkit.org>

Reviewed by Oliver.

        SVG does not correctly handle onfocusin, onfocusout or onactivate
        http://bugs.webkit.org/show_bug.cgi?id=12573

        Test: svg/W3C-SVG-1.1/script-handle-02-b.svg

        * ksvg2/svg/SVGElement.cpp:
        (WebCore::SVGElement::parseMappedAttribute):
        * ksvg2/svg/svgattrs.in: add onfocusin, onfocusout and onactivate



Canonical link: https://commits.webkit.org/20497@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@26507 268f45cc-cd09-0410-ab3c-d52691b4dbfc